[package]
name = "delivery_customization_move_to_last_by_title"
version = "1.0.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.13", features = ["derive"] }
shopify_function = { version = "0.2.3" }
graphql_client = { git = "https://github.com/graphql-rust/graphql-client" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
