[package]
name = "shopifyvm"
version = "1.0.0"
edition = "2021"

[dependencies]
shopify_function = { version = "0.2.3" }
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0"
graphql_client = { git = "https://github.com/graphql-rust/graphql-client" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
