[package]
name = "product-discount"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.13", features = ["derive"] }
serde_json = "1.0"
shopify_function = { version = "0.2.4" }
graphql_client = { version = "0.12.0" }

[profile.release]
lto = true
opt-level = 'z'
strip = true
